Sugati/src/objects/Flight_Booking__c.object
<CustomObject>
    <fields>
        <fullName>FB_Base_Cost_in_Local_Currency__c</fullName>
        <label>Base Cost in Local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FB_Exchange_Rate_Look_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Rate Look Up</label>
        <referenceTo>Exchange_Rate__c</referenceTo>
        <relationshipLabel>Flight Bookings</relationshipLabel>
        <relationshipName>Flight_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FB_Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Member</label>
        <referenceTo>Group_Member__c</referenceTo>
        <relationshipLabel>Flight Bookings</relationshipLabel>
        <relationshipName>Flight_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FB_MarkedUp_Cost__c</fullName>
        <label>MarkedUp Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FB_Net_Cost_in_GBP__c</fullName>
        <formula>FB_Base_Cost_in_Local_Currency__c /  FB_Exchange_Rate_Look_Up__r.ER_Exchange_Rate__c</formula>
        <label>Net Cost in GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FB_Seat_No__c</fullName>
        <label>Seat No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Supplier_Booking__c</fullName>
        <label>Supplier Booking</label>
        <referenceTo>Supplier_Booking__c</referenceTo>
        <relationshipLabel>Flight Bookings</relationshipLabel>
        <relationshipName>Flight_Bookings1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Flight Booking</label>
    <nameField>
        <displayFormat>FB-{0000000000}</displayFormat>
        <label>Flight Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Bookings</pluralLabel>
    <recordTypes>
        <fullName>Dom_Flight</fullName>
        <active>true</active>
        <description>Domestic Flights</description>
        <label>Dom Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Int_Flight</fullName>
        <active>true</active>
        <description>International Flight</description>
        <label>Int Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Light_Aircraft</fullName>
        <active>true</active>
        <label>Light Aircraft</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>